--- a/Pulzní oxymetrie Truksa, Tvrdík/Prilohy/InformovanySouhlas.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Prilohy/InformovanySouhlas.tex
@@ -4,12 +4,11 @@
 \noindent\textbf{Účastník: }..............................................\par
 \noindent\textbf{Název práce: } Pulzní oxymetrie\par
 \noindent\textbf{Účel: } Účelem tohoto výzkumu je porovnat pulz a saturaci kyslíku v krvi při různé míře zátěže u různých demografických skupin.\par
-\noindent\textbf{Získávané osobní údaje: } Věková skupina, pohlaví, krevní pulz, saturace kyslíku v krvi (\(SpO_2\))\par
+\noindent\textbf{Získávané osobní údaje: } Věková skupina, pohlaví, krevní pulz, saturace kyslíku v krvi, obecná sportovní zdatnost\par
 \noindent\textbf{Etické zásady výzkumu: }\par
 \emph{Účast ve výzkumu} je dobrovolná. Svou účast může účastník kdykoliv před publikací práce zrušit.\par
 Jediná \emph{osobní data} získávaná od účastníka jsou ta, jež jsou uvedena výše v tomto souhlasu. Jakákoliv jiná osobní data nebudou publikována.\par
 \noindent\textbf{Rizika spojená s účastí ve výzkumu: } Účastí na tomto výzkumu účastníkovi nevznikají žádná rizika.\par
 \noindent\textbf{Prohlášení účastníka výzkumu: } Prohlašuji, že dobrovolně a ze své vůle souhlasím se svojí účastí ve výzkumu a že mi byl vysvětlen průběh a účel výzkumu. Dále prohlašuji, že jsem byl/a seznámen/a s etickými zásadami výzkumu a souhlasím s publikací výše uvedených osobních údajů. Také jsem si vědom/a, že tento souhlas mohu kdykoliv před publikací této práce odvolat.
 \vfill
-\noindent V \hspace{4.5cm} dne\hspace{0.7cm}.\hspace{0.7cm}. 2022
 \begin{flushright}Podpis: .....................................\end{flushright}
