--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Anotace.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Anotace.tex
@@ -4,17 +4,17 @@
 \setlength\extrarowheight{3pt}
 \begin{tabular}{|p{5cm}|p{10cm}|}
 \hline
-ANOTACE & Tato práce se zabývá pulzní oxymetrií a je rozdělena na tři části. V první části práce byly popsány principy pulzní oxymetrie, její technická implementace a její různá využití. Druhá část se zabývá samotným vývojem oxymetru pro domácí použití. Ve třetí části byl proveden výzkum obsahu kyslíku v krvi za použití vytvořeného oxymetru.\\
+ANOTACE & Tato práce se zabývá pulzní oxymetrií a je rozdělena na tři části. V první části práce byly popsány principy pulzní oxymetrie, její technická implementace a její různá využití. Druhá část se zabývá samotným vývojem oxymetru pro domácí použití. Ve třetí části byla demonstrována funkčnost oxymetru provedením výzkum obsahu kyslíku v krvi během fyzické aktivity.\\
 \hline
 KLÍČOVÁ SLOVA & pulzní oxymetrie, \(SpO_2\), hemoglobin, saturace, oxymetr, 3D tisk\\
 \hline
 \selectlanguage{english}
-ANNOTATION & This thesis deals with pulse oximetry and is divided into three parts. In the first part the principles of pulse oximetry, its technical implementation, and its various uses were described. The second part deals with the development of an oximeter for home use. In the third part levels of blood oxygen were investigated using the developed oximeter.\\
+ANNOTATION & This thesis deals with pulse oximetry and is divided into three parts. In the first part the principles of pulse oximetry, its technical implementation, and its various uses were described. The second part deals with the development of an oximeter for home use. In the third part the functionality of the oximeter was demonstrated by investigating levels of blood oxygen during physical activity.\\
 \hline
 KEYWORDS & pulse oximetry, \(SpO_2\), hemoglobin, saturation, oximeter, 3D printing\\
 \hline
 \selectlanguage{spanish}
-ANOTACIÓN & Esta tesis trata de la pulsioximetría y se divide en tres partes. En la primera parte, fueron descritos los principios de la pulsioximetría, su aplicación técnica y sus diversos usos. La segunda parte trata del desarrollo de un oxímetro para uso doméstico. En la tercera parte, fueron investigados los niveles de oxígeno en la sangre, utilizando el oxímetro desarollado.\\
+ANOTACIÓN & Esta tesis trata de la pulsioximetría y se divide en tres partes. En la primera parte, fueron descritos los principios de la pulsioximetría, su aplicación técnica y sus diversos usos. La segunda parte trata del desarrollo de un oxímetro para uso doméstico. En la tercera parte, fue demonstrada la funcionalidad del oxímetro investigando los niveles de oxígeno en la sangre durante una actividad física.\\
 \hline
 PALABRAS CLAVE & pulsioximetría, \(SpO_2\), hemoglobina, saturación, oxímetro, impresión 3D\\
 \hline
