--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Anotace.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Anotace.tex
@@ -1,10 +1,9 @@
-%Třetí Strana
 \null
 \hlavicka
 \setlength\extrarowheight{3pt}
 \begin{tabular}{|p{5cm}|p{10cm}|}
 \hline
-ANOTACE & Tato práce se zabývá pulzní oxymetrií a je rozdělena na tři části. V první části práce byly popsány principy pulzní oxymetrie, její technická implementace a její různá využití. Druhá část se zabývá samotným vývojem oxymetru pro domácí použití. Ve třetí části byla demonstrována funkčnost oxymetru provedením výzkum obsahu kyslíku v krvi během fyzické aktivity.\\
+ANOTACE & Tato práce se zabývá pulzní oxymetrií a je rozdělena na tři části. V první části práce byly popsány principy pulzní oxymetrie, její technická implementace a její různá využití. Druhá část se zabývá samotným vývojem oxymetru pro domácí použití. Ve třetí části byla demonstrována funkčnost oxymetru provedením výzkumu obsahu kyslíku v krvi během fyzické aktivity.\\
 \hline
 KLÍČOVÁ SLOVA & pulzní oxymetrie, \(SpO_2\), hemoglobin, saturace, oxymetr, 3D tisk\\
 \hline
