--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Podekovani.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Podekovani.tex
@@ -1,5 +1,4 @@
-\null
-\vfill %odsadí dolů
+\null \vfill
 \section*{Poděkování}
 Chtěli bychom poděkovat panu Ing. Jaroslavu Šebestíkovi, Ph.D. za jeho trpělivost a četné konzultace, bez kterých by tato práce nemohla vzniknout, paní Mgr. Věře Jurčákové za její připomínky k práci a cvičební materiály, které poskytla jako podklad pro náš výzkum a Benjaminu Swartovi za jeho asistenci při procesu designování 3D modelů. Velké poděkování patří také vedení naší školy, za peníze na nákup potřebné elektroniky a zprostředkování příležitosti zpracovávat toto téma. V neposlední řadě patří poděkování všem účastníkům našeho výzkumu za jejich účast ve výzkumu a jejich zpětnou vazbu k našemu oxymetru.
 \section*{Etické zásady}
