--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
@@ -54,7 +54,7 @@ Při využívání pulzní oxymetrie jsou 2 různá uspořádání elektroniky v
 \begin{figure}[H]
     \def\svgwidth{\columnwidth}
     \input{Kapitoly/Teoreticka/Obrazky/Metody.pdf_tex}
-    \caption [Transmisní a reflektanční metoda]{Při pulzní oxymetrii lze využít elektroniku ve dvou uspořádáních, které určují metodu měření. Při transmisní metodě (1) jsou dva světelné zdroje naproti fotodiodě, kdežto při reflektanční metodě (2) se nachází fotodioda na stejné straně přístroje mezi zdroji světla.}
+    \caption [Transmisní a reflektanční metoda]{Při pulzní oxymetrii lze využít elektroniku ve dvou uspořádáních, která určují metodu měření. Při transmisní metodě (1) jsou dva světelné zdroje naproti fotodiodě, kdežto při reflektanční metodě (2) se nachází fotodioda na stejné straně přístroje mezi zdroji světla. Vlastní dílo}
     \label{fig:Metody}
 \end{figure}
 \par \textbf{Transmisní metoda} (obrázek \ref{fig:Metody}, (1)) měření spočívá v měření světla, které projde skrz tkáň, což v praxi znamená, že se na kůži z jedné strany svítí oběma diodami a fotodioda se nachází naproti nim. Hlavní výhodou tohoto způsobu měření je vysoká přesnost výsledného měření, které je dosaženo převážně díky přímé trajektorii světla, kdy nezáleží na jeho odrazu od prstu. Naopak hlavní nevýhodou této metody je relativně omezené množství materiálu mezi diodami a fotodiodou, protože při větším množství tkáně v trase světla by již nedocházelo k dostatečnému přenosu světla pro přesné určení saturace. Tato metoda se tedy využívá při měření přes prst, případně ušní lalůček.
