--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Zaver.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Zaver.tex
@@ -1,3 +1,6 @@
 \newpage
 \part{Závěr}
-Tady bude závěr
+V této práci jsme se seznámili s principy pulzní oxymetrie, která je jednou z klíčových metod našeho zdravotnictví, avšak má přesah i do jiných částí lidského života, například sportu. Také byl představen proces vývoje osobního pulzního oxymetru zkonstruovatelného z komerčně dostupných a vytištěných součástí. V závěru byl tento oxymetr otestován, byla představena a popsána naměřená data a byly diskutovány další možná vylepšení a další změny pro tento oxymetr.
+\par Nejdříve byla představena samotná metoda pulzní oxymetrie byla představena před 2. světovou válkou, širšího využití se jí dostalo až za války. Od té doby se stala nezbytnou součástí pro monitorování pacientů v kritických situacích a do dnešního dne je nejlepší metodou pro rychlá měření i přesto že má své nedostatky.
+\par Následně jsme přestavili námi vyvinutý oxymetr včetně postupu jeho výroby, od prvního prototypu, až po finální verzi. K oximetru jsme také vyrobili „Příručku pro kutily“ (Příloha \ref{appn:Guide}), která bude volně dostupná na internetu pro lidi, kteří by měli zájem si oxymetr vyrobit a případně upravit pro vlastní potřebu.
+\par V závěru jsme prezentovali výsledky našeho oxymetru pomocí malé studie, jež se zabývala měřením tepu a saturace kyslíku v krvi při intenzivní krátkodobé námaze. Na konci této studie jsme diskutovali nedostatky a možná vylepšení současného modelu.
