--- a/Pulzní oxymetrie Truksa, Tvrdík/Prilohy/InformovanySouhlas.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Prilohy/InformovanySouhlas.tex
@@ -1,10 +1,11 @@
 \section{Informovaný souhlas účastníka výzkumu}
+\label{appn:Agreement}
 \noindent Tento souhlas bude vyhotoven ve dvou (2) kopiích, z nichž jednu obdrží účastník a druhou autoři práce.\par
 \noindent\textbf{Autoři práce: } Martin Truksa, Vojtěch Tvrdík\par
 \noindent\textbf{Účastník: }..............................................\par
 \noindent\textbf{Název práce: } Pulzní oxymetrie\par
-\noindent\textbf{Účel: } Účelem tohoto výzkumu je porovnat pulz a saturaci kyslíku v krvi při různé míře zátěže u různých demografických skupin.\par
-\noindent\textbf{Získávané osobní údaje: } Věková skupina, pohlaví, krevní pulz, saturace kyslíku v krvi, obecná sportovní zdatnost\par
+\noindent\textbf{Účel: } Účelem tohoto výzkumu je změřit pulz a saturaci kyslíku v krvi při vysoké zátěži.\par
+\noindent\textbf{Získávané osobní údaje: } Věková skupina, pohlaví, krevní pulz, saturace kyslíku v krvi, obecná sportovní zdatnost.\par
 \noindent\textbf{Etické zásady výzkumu: }\par
 \emph{Účast ve výzkumu} je dobrovolná. Svou účast může účastník kdykoliv před publikací práce zrušit.\par
 Jediná \emph{osobní data} získávaná od účastníka jsou ta, jež jsou uvedena výše v tomto souhlasu. Jakákoliv jiná osobní data nebudou publikována.\par
