--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
@@ -70,6 +70,36 @@
   year      = {2020},
   publisher = {Frontiers}
 }
+ @misc{rp2040DS,
+  title     = {RP2040 Datasheet},
+  url       = {https://datasheets.raspberrypi.com/rp2040/rp2040-datasheet.pdf},
+  journal   = {Raspberry Pi Datasheets},
+  publisher = {{Raspberry Pi Trading Ltd}},
+  author    = {{Raspberry Pi Trading Ltd}},
+  year      = {2021},
+  month     = {Nov},
+  note      = {[online, citováno 2022-03-03]}
+} 
+@misc{picoDS,
+  title     = {Raspberry Pi Pico Datasheet},
+  url       = {https://datasheets.raspberrypi.com/pico/pico-datasheet.pdf},
+  journal   = {Raspberry Pi Datasheets},
+  publisher = {{Raspberry Pi Trading Ltd}},
+  author    = {{Raspberry Pi Trading Ltd}},
+  year      = {2021},
+  month     = {Nov},
+  note      = {[online, citováno 2022-03-03]}
+}
+@misc{max30100,
+  title     = {Interfacing MAX30100 pulse oximeter sensor with Arduino},
+  url       = {https://how2electronics.com/interfacing-max30100-pulse-oximeter-sensor-arduino/},
+  journal   = {How To Electronics},
+  publisher = {{How To Electronics}},
+  author    = {{How To Electronics}},
+  year      = {2021},
+  month     = {Aug},
+  note      = {[online, citováno 2022-03-13]}
+} 
 @article{O2terapie,
   title     = {Acute oxygen therapy},
   author    = {Bateman, NT and Leach, RM},
