--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/CestneProhlaseni.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/CestneProhlaseni.tex
@@ -1,20 +1,19 @@
-\null
-\vfill %odsadí dolů
+\null \vfill
 \section*{Prohlášení}
 Prohlašujeme, že jsme svou práci vypracovali samostatně a použili jsme pouze podklady (literaturu, SW atd.) uvedené v přiloženém seznamu. Nemáme závažný důvod proti zpřístupňování této práce v souladu se zákonem č. 121/2000 Sb., o právu autorském, o právech souvisejících s právem autorským a o změně některých zákonů (autorský zákon) v platném znění.\\\\\\
 
 \noindent
-V~Praze~dne~\today
+V~Praze~dne~24.~března~2022 
 \begin{flushright}
 ........................................\\
-\emph{Martin Truksa~~~~~~~~} %přidat podpis
+\emph{Martin Truksa~~~~~~~~}
 \end{flushright}
 ~\\~\\~
 \noindent
-V~Praze~dne~\today
+V~Praze~dne~24.~března~2022 
 \begin{flushright}
 ........................................\\
-\emph{Vojtěch Tvrdík~~~~~~~~} %přidat podpis
+\emph{Vojtěch Tvrdík~~~~~~~~}
 \end{flushright}
 
 \thispagestyle{empty} 
