--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Formular.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Formular.tex
@@ -1,10 +1,9 @@
-%Druhá Strana
 \null
 \hlavicka
-\begin{tabular}{|>{ \itshape\large}m{0.965\textwidth}|} %ošklivý hard-codnutý číslo, ale sedí to
+\begin{tabular}{|>{ \itshape\large}m{0.965\textwidth}|}
 \hline
 \vspace{0.75cm}
-\centerline{\uppercase\expandafter{\tema}}\\ %https://tex.stackexchange.com/questions/35680/uppercase-in-newcommand
+\centerline{\uppercase\expandafter{\tema}}\\
 \hline
 \end{tabular}
 \\\\\\\\\\
@@ -17,12 +16,12 @@
 \textbf{Vedoucí práce:} Ing. Jaroslav Šebestík, Ph.D.\\
 \textbf{Oponent:} Mgr. Věra Jurčáková\\
 \textbf{Rozsah práce (s.):}\par
-celkový (včetně této strany, vyjma titulní):\par
-vlastní text:\par
-přílohy:\par
-vědecký aparát (poznámky, bibliografie aj.):\\\\\\\\
-\textbf{Formát elektronické podoby práce:} \LaTeX (.tex, .bib, .png, .svg), .pdf\\\\
-%\textbf{Poznámky} (vyplývající ze specifik jednotlivých oborů):
+celkový (včetně této strany, vyjma titulní): 39\par
+vlastní text: 25\par
+přílohy: 5 + samostatné přiložené soubory (modely, zdrojový kód)\par
+vědecký aparát (poznámky, bibliografie aj.): 3\\\\\\\\
+\textbf{Formát elektronické podoby práce:} \LaTeX (.tex, .bib, .png, .jpg, .pdf, .pdf\_tex), .pdf\\
+\textbf{Formát příloh práce:} .ino, .py, .xlsx, .stl, .blend, .txt
 
 \thispagestyle{empty} 
 \newpage
