--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Vyuziti.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Vyuziti.tex
@@ -7,7 +7,7 @@ Velmi častou metodou používanou při tréninku u vrcholových sportovců je c
 \subsubsection {Pulz}
 Vzhledem k tomu, že při funkci pulzního oxymetru je měřen i tep, je pulzní oxymetr velmi vhodný pro i pro amatérské a občasné sportovce. Různé tepové zátěže (v poměru k maximální tepové frekvenci) odpovídají různým typům cvičení, která mají odlišné cíle, tak jak je uvedeno v tabulce \ref{tab:MTF}. Pulzní oxymetry v chytrých náramcích a hodinkách, jež jsou zdaleka nejčastějšími pulzními oxymetry pro sportovce, mají tedy i možnost ukazovat typ cvičení a díky tomu například i rady a informace pro uživatele.
 \par Samotný výpočet maximální tepové frekvence je pro takové zařízení však těžší. Vzorce pro tento výpočet obecně nejsou uznávány jako dostatečně přesné vzhledem k různorodosti každého člověka. Ačkoliv byly v minulosti studie, které se snažily vzorce upřesňovat na základě různých parametrů, nepanuje shoda na žádném vzorci ani na proměnných důležitých pro výpočet. Příkladem může být studie, která jako jediný parametr uvádí věk a od něj odvozuje jeden z nejpoužívanějších vzorců pro odhad ($HR_{Max}=211-0,64\times\text{věk}$). Tato studie však dochází k závěru, že "Předpovídání maximální tepové frekvence podle věku může být pro různé skupiny velmi pohodlné, avšak je potřeba brát v úvahu standardní odchylku 10,8 tepů za minutu." \citep{maxHR}. K závěru svědčícímu proti předpovědi fyzických výsledků pomocí složitých výpočtů dochází i \cite{Cooper}. V jejich studii zaměřující se na odhad času v půlmaratonu zkoumali kromě stavby těla i  uběhlou vzdáleností v Cooperově testu a došli k závěru, že samotný 12minutový Cooperův test je v předpovídání přesnější, než jakákoliv rovnice zahrnující tělesné údaje.
-\begin{table}[h]
+\begin{table}[ht]
     \centering
     \begin{tabular}{p{0.25\linewidth} | p{0.1\linewidth} | p{0.30\linewidth} | p{0.24\linewidth}}
         \textbf{Typ cvičení}            & \textbf{\% Max TF} & \textbf{Cíl cvičení}                                              & \textbf{Fyzický pocit}              \\ \hline
