--- a/Pulzní oxymetrie Truksa, Tvrdík/main.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/main.tex
@@ -12,7 +12,8 @@
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{xcolor}
-\usepackage[normalem]{ulem}
+\usepackage{transparent}
+\usepackage{listings}
 
 \bibliographystyle{unsrtnat}
 \setcitestyle{authoryear,open={(},close={)}}
@@ -21,7 +22,7 @@
 \newcommand\tema{Pulzní Oxymetrie}
 \newcommand\obor{Informatika}
 \newcommand\hlavicka{\noindent\includegraphics[width=0.993\textwidth]{Formality/Hlavicka.png}\\\\}
-\newcommand*{\doi}[1]{\href{https://doi.org/#1}{doi: #1}} %https://tex.stackexchange.com/questions/3802/how-to-get-doi-links-in-bibliography
+\newcommand*{\doi}[1]{\href{https://doi.org/#1}{doi: #1}} 
 \hbadness=10000
 
 
